se agrego cambios en la vista de info de parque, captcha reclamo,

--- a/plantilla/css/home.css
+++ b/plantilla/css/home.css
@@ -1605,7 +1605,7 @@ pre code {
   padding-right: 15px;
 }
 .row {
-  /*original 
+  /*original
     margin-left: -15px;
     margin-right: -15px;
   */
@@ -6876,23 +6876,23 @@ display: none;
 /*ABM PARQUES*/
 
 /*CARGAR*/
-#cargar_form_admin_crear_actividad_parque, #cargar_form_admin_crear_actividad, #cargar_form_admin_actualizar_parque, #cargar_form_admin_actualizar_actividad_parque {
+#cargar_crear_parque, #cargar_form_admin_actualizar_feria_itinerante_parque, #cargar_crear_feria_itinerante_parque, #cargar_form_admin_actualizar_feria_comun_parque, #cargar_crear_feria_comun_parque, #cargar_form_admin_actualizar_punto_verde_parque, #cargar_crear_punto_verde_parque, #cargar_crear_estacion_salud_parque, #cargar_form_admin_actualizar_estacion_salud_parque, #cargar_form_admin_crear_actividad_parque, #cargar_form_admin_crear_actividad, #cargar_form_admin_actualizar_parque, #cargar_form_admin_actualizar_actividad_parque {
   display: none;
 }
 
 /*ERROR*/
-#error_form_admin_crear_actividad_parque, #error_form_admin_actualizar_parque, #error_form_admin_actualizar_actividad_parque, #error_form_admin_crear_actividad {
+#error_crear_parque, #error_form_admin_actualizar_feria_itinerante_parque, #error_crear_feria_itinerante_parque, #error_form_admin_actualizar_feria_comun_parque, #error_crear_feria_comun_parque, #error_form_admin_actualizar_punto_verde_parque, #error_crear_punto_verde_parque, #error_crear_estacion_salud_parque, #error_form_admin_actualizar_estacion_salud_parque, #error_form_admin_crear_actividad_parque, #error_form_admin_actualizar_parque, #error_form_admin_actualizar_actividad_parque, #error_form_admin_crear_actividad {
   display: none;
 }
 
 
 /*
-hr { 
-   border: 5px solid #4bceb4; 
-   border-radius: 200px /8px; 
-   height: 0px; 
-   text-align: center; 
- }*/ 
+hr {
+   border: 5px solid #4bceb4;
+   border-radius: 200px /8px;
+   height: 0px;
+   text-align: center;
+ }*/
 
 /*AUTOCOMPLETARRR*/
  .autocomplete {
@@ -6923,17 +6923,17 @@ input[type=submit] {
 .autocomplete-items div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff; 
-  border-bottom: 1px solid #d4d4d4; 
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
 }
 .autocomplete-items div:hover {
   /*when hovering an item:*/
-  background-color: #e9e9e9; 
+  background-color: #e9e9e9;
 }
 .autocomplete-active {
   /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 .wrapper {
 height: 500px !important;
